[gd_scene load_steps=9 format=3 uid="uid://bhgjn7tbyiglm"]

[ext_resource type="Texture2D" uid="uid://bb1vc6k2mtb24" path="res://assets/LOGO.png" id="1_1u6fw"]
[ext_resource type="Script" uid="uid://co8veg1jpcbu8" path="res://scripts/splashscreen.gd" id="1_jnvd6"]
[ext_resource type="Texture2D" uid="uid://cfovmyoap1isu" path="res://made-with-godot-light.png" id="2_vtbok"]
[ext_resource type="Texture2D" uid="uid://broluuwppe4ai" path="res://original-large.png" id="3_xvs0d"]

[sub_resource type="Theme" id="Theme_jnvd6"]

[sub_resource type="Animation" id="Animation_kdb2t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GodotLogo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MadeWithGodot:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cte4o"]
resource_name = "fade_out"
length = 10.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(5.5, 7.5, 8.5, 10.5),
"transitions": PackedFloat32Array(2, 1, 1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GodotLogo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 3, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MadeWithGodot:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 3, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j3viy"]
_data = {
&"RESET": SubResource("Animation_kdb2t"),
&"fade_out": SubResource("Animation_cte4o")
}

[node name="SplashScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jnvd6")
script = ExtResource("1_jnvd6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="GodotLogo" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(576, 288)
scale = Vector2(6.16667, 6.16667)
texture = ExtResource("3_xvs0d")

[node name="MadeWithGodot" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(576, 440)
scale = Vector2(3.33333, 3.33333)
texture = ExtResource("2_vtbok")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(576, 320)
texture = ExtResource("1_1u6fw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_j3viy")
}
autoplay = "fade_out"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
